--- a/roles/workstation/templates/bashrc.j2
+++ b/roles/workstation/templates/bashrc.j2
@@ -115,4 +115,7 @@ if ! shopt -oq posix; then
   elif [ -f /etc/bash_completion ]; then
     . /etc/bash_completion
   fi
+  if [ -f $HOME/.local/bin/aws_completer ]; then
+    complete -C '$HOME/.local/bin/aws_completer' aws
+  fi
 fi
