Include go PATH

--- a/roles/workstation/templates/profile.j2
+++ b/roles/workstation/templates/profile.j2
@@ -26,4 +26,8 @@ if [ -d "$HOME/.dotnet/tools" ] ; then
     PATH="$HOME/.dotnet/tools:$PATH"
 fi
 
+if [ -d "$HOME/go/bin" ] ; then
+    PATH="$HOME/go/bin:$PATH"
+fi
+
 EDITOR=/usr/bin/vim
