Add minikube completion

--- a/roles/cklein.shell/templates/bash_completion.j2
+++ b/roles/cklein.shell/templates/bash_completion.j2
@@ -34,3 +34,6 @@ fi
 if kubectl > /dev/null 2> /dev/null; then
   source <(kubectl completion bash)
 fi
+if minikube > /dev/null 2> /dev/null; then
+  source <(minikube completion bash)
+fi
