--- a/roles/cklein.shell/templates/profile.j2
+++ b/roles/cklein.shell/templates/profile.j2
@@ -12,6 +12,7 @@
 #
 # Add framework-specific PATHs
 #
+export DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1
 if [ -d "$HOME/.dotnet/tools" ] ; then
     PATH="$HOME/.dotnet/tools:$PATH"
 fi
