Setup git-send-email

--- a/roles/cklein.git/templates/gitconfig.j2
+++ b/roles/cklein.git/templates/gitconfig.j2
@@ -7,3 +7,8 @@
 	default = simple
 [alias]
 	wdiff = diff --color-words
+[sendemail]
+	smtpServer = smtp.gmail.com
+	smtpServerPort = 587
+	smtpEncryption = tls
+	smtpUser = {{ email }}
