--- a/roles/cklein.shell/templates/bashrc.j2
+++ b/roles/cklein.shell/templates/bashrc.j2
@@ -97,3 +97,10 @@ if ! shopt -oq posix; then
     . /etc/bash_completion
   fi
 fi
+
+# Prefer GPG as SSH agent, if available
+GPG_SSH_AUTH_SOCK="${XDG_RUNTIME_DIR:-/run/user/$(id -u)}/gnupg/S.gpg-agent.ssh"
+if [ -S "$GPG_SSH_AUTH_SOCK" ]; then
+  export SSH_AGENT_LAUNCHER=overridden-from-dot-profile
+  export SSH_AUTH_SOCK="$GPG_SSH_AUTH_SOCK"
+fi
